--- a/451_500.md
+++ b/451_500.md
@@ -1325,7 +1325,417 @@ Therefore, Option B is the correct solution.
 
 </details>
 
+<details>
+  <summary>Question 481</summary>
 
+A company hosts a three-tier web application in the AWS Cloud.
+A Multi-AZ Amazon RDS for MySQL server forms the database layer Amazon ElastiCache forms the cache layer.
+The company wants a caching strategy that adds or updates data in the cache when a customer adds an item to the database.
+The data in the cache must always match the data in the database.
+
+Which solution will meet these requirements?
+
+-   [ ] A. Implement the lazy loading caching strategy
+-   [ ] B. Implement the write-through caching strategy
+-   [ ] C. Implement the adding TTL caching strategy
+-   [ ] D. Implement the AWS AppConfig caching strategy
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Implement the write-through caching strategy
+
+Why these are the correct answers:
+
+B. Implement the write-through caching strategy
+
+-   [ ] Write-through caching ensures that data is written to both the cache and the database simultaneously, maintaining data consistency.
+
+Why are the other answers wrong?
+
+-   [ ] A. Lazy loading only loads data into the cache when it is first requested, which does not guarantee that the cache is updated when a customer adds an item.
+-   [ ] C. Adding TTL (Time To Live) involves setting an expiration time for cached data, which does not ensure immediate cache updates when the database is updated.
+-   [ ] D. AWS AppConfig is for application configuration management, not for caching strategies.
+
+Therefore, Option B is the correct solution.
+
+</details>
+<details>
+  <summary>Question 482</summary>
+
+A company wants to migrate 100 GB of historical data from an on-premises location to an Amazon S3 bucket.
+The company has a 100 megabits per second (Mbps) internet connection on premises.
+The company needs to encrypt the data in transit to the S3 bucket.
+The company will store new data directly in Amazon S3.
+Which solution will meet these requirements with the LEAST operational overhead?
+
+-   [ ] A. Use the s3 sync command in the AWS CLI to move the data directly to an S3 bucket
+-   [ ] B. Use AWS DataSync to migrate the data from the on-premises location to an S3 bucket
+-   [ ] C. Use AWS Snowball to move the data to an S3 bucket
+-   [ ] D. Set up an IPsec VPN from the on-premises location to AWS.
+    Use the s3 cp command in the AWS CLI to move the data directly to an S3 bucket
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Use AWS DataSync to migrate the data from the on-premises location to an S3 bucket
+
+Why these are the correct answers:
+
+B. Use AWS DataSync to migrate the data from the on-premises location to an S3 bucket
+
+-   [ ] AWS DataSync automates and accelerates data transfer between on-premises storage and Amazon S3.
+-   [ ] It handles encryption in transit and minimizes operational overhead.
+
+Why are the other answers wrong?
+
+-   [ ] A and D. Using the AWS CLI or setting up an IPsec VPN requires more manual configuration and management.
+-   [ ] C. AWS Snowball is for large-scale data transfers and is not suitable for only 100 GB of data.
+
+Therefore, Option B is the most efficient solution.
+
+</details>
+<details>
+  <summary>Question 483</summary>
+
+A company containerized a Windows job that runs on .NET 6 Framework under a Windows container.
+The company wants to run this job in the AWS Cloud.
+The job runs every 10 minutes.
+The job's runtime varies between 1 minute and 3 minutes.
+Which solution will meet these requirements MOST cost-effectively?
+
+-   [ ] A. Create an AWS Lambda function based on the container image of the job.
+    Configure Amazon EventBridge to invoke the function every 10 minutes.
+-   [ ] B. Use AWS Batch to create a job that uses AWS Fargate resources.
+    Configure the job scheduling to run every 10 minutes.
+-   [ ] C. Use Amazon Elastic Container Service (Amazon ECS) on AWS Fargate to run the job.
+    Create a scheduled task based on the container image of the job to run every 10 minutes.
+-   [ ] D. Use Amazon Elastic Container Service (Amazon ECS) on AWS Fargate to run the job.
+    Create a standalone task based on the container image of the job.
+    Use Windows task scheduler to run the job every 10 minutes.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C. Use Amazon Elastic Container Service (Amazon ECS) on AWS Fargate to run the job.
+    Create a scheduled task based on the container image of the job to run every 10 minutes.
+
+Why these are the correct answers:
+
+C. Use Amazon Elastic Container Service (Amazon ECS) on AWS Fargate to run the job.
+Create a scheduled task based on the container image of the job to run every 10 minutes.
+
+-   [ ] Amazon ECS on Fargate is cost-effective for running containerized applications without managing the underlying infrastructure.
+-   [ ] Scheduled tasks in ECS allow for automated execution of the job at regular intervals.
+
+Why are the other answers wrong?
+
+-   [ ] A. Lambda has limitations on runtime for container images, and it may not be suitable for jobs that can run up to 3 minutes.
+-   [ ] B. AWS Batch is designed for batch processing and is more suitable for large-scale, long-running jobs, not for short, frequent tasks.
+-   [ ] D. Using Windows task scheduler adds complexity and requires managing a separate scheduling mechanism.
+
+Therefore, Option C is the most cost-effective and efficient solution.
+
+</details>
+<details>
+  <summary>Question 484</summary>
+
+A company wants to move from many standalone AWS accounts to a consolidated, multi-account architecture.
+The company plans to create many new AWS accounts for different business units.
+The company needs to authenticate access to these AWS accounts by using a centralized corporate directory service.
+Which combination of actions should a solutions architect recommend to meet these requirements? (Choose two.)
+
+-   [ ] A. Create a new organization in AWS Organizations with all features turned on.
+    Create the new AWS accounts in the organization.
+-   [ ] B. Set up an Amazon Cognito identity pool.
+    Configure AWS IAM Identity Center (AWS Single Sign-On) to accept Amazon Cognito authentication.
+-   [ ] C. Configure a service control policy (SCP) to manage the AWS accounts.
+    Add AWS IAM Identity Center (AWS Single Sign-On) to AWS Directory Service.
+-   [ ] D. Create a new organization in AWS Organizations.
+    Configure the organization's authentication mechanism to use AWS Directory Service directly.
+-   [ ] E. Set up AWS IAM Identity Center (AWS Single Sign-On) in the organization.
+    Configure IAM Identity Center, and integrate it with the company's corporate directory service.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Create a new organization in AWS Organizations with all features turned on.
+    Create the new AWS accounts in the organization.
+-   [ ] E. Set up AWS IAM Identity Center (AWS Single Sign-On) in the organization.
+    Configure IAM Identity Center, and integrate it with the company's corporate directory service.
+
+Why these are the correct answers:
+
+A. Create a new organization in AWS Organizations with all features turned on.
+Create the new AWS accounts in the organization.
+
+-   [ ] AWS Organizations provides centralized management of multiple AWS accounts.
+
+E. Set up AWS IAM Identity Center (AWS Single Sign-On) in the organization.
+Configure IAM Identity Center, and integrate it with the company's corporate directory service.
+
+-   [ ] AWS IAM Identity Center (successor to AWS SSO) enables centralized authentication using a corporate directory.
+
+Why are the other answers wrong?
+
+-   [ ] B. Amazon Cognito is for customer identity and access management, not for internal corporate directory integration.
+-   [ ] C. SCPs manage permissions, not authentication.
+-   [ ] D. AWS Organizations does not directly integrate with AWS Directory Service for authentication.
+    IAM Identity Center is needed.
+
+Therefore, Options A and E are the correct solutions.
+
+</details>
+<details>
+  <summary>Question 485</summary>
+
+A company is looking for a solution that can store video archives in AWS from old news footage.
+The company needs to minimize costs and will rarely need to restore these files.
+When the files are needed, they must be available in a maximum of five minutes.
+What is the MOST cost-effective solution?
+
+-   [ ] A. Store the video archives in Amazon S3 Glacier and use Expedited retrievals.
+-   [ ] B. Store the video archives in Amazon S3 Glacier and use Standard retrievals.
+-   [ ] C. Store the video archives in Amazon S3 Standard-Infrequent Access (S3 Standard-IA).
+-   [ ] D. Store the video archives in Amazon S3 One Zone-Infrequent Access (S3 One Zone-IA).
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Store the video archives in Amazon S3 Glacier and use Expedited retrievals.
+
+Why these are the correct answers:
+
+A. Store the video archives in Amazon S3 Glacier and use Expedited retrievals.
+
+-   [ ] Amazon S3 Glacier is the most cost-effective storage for archiving data.
+-   [ ] Expedited retrievals allow for access to data within minutes.
+
+Why are the other answers wrong?
+
+-   [ ] B. Standard retrievals from Glacier take several hours, which does not meet the 5-minute requirement.
+-   [ ] C and D. S3 Standard-IA and S3 One Zone-IA are more expensive than Glacier and are designed for more frequent access.
+
+Therefore, Option A is the most cost-effective solution that meets the retrieval time requirement.
+
+</details>
+<details>
+  <summary>Question 486</summary>
+
+A company is building a three-tier application on AWS.
+The presentation tier will serve a static website The logic tier is a containerized application.
+This application will store data in a relational database.
+The company wants to simplify deployment and to reduce operational costs.
+Which solution will meet these requirements?
+
+-   [ ] A. Use Amazon S3 to host static content.
+    Use Amazon Elastic Container Service (Amazon ECS) with AWS Fargate for compute power.
+    Use a managed Amazon RDS cluster for the database.
+-   [ ] B. Use Amazon CloudFront to host static content.
+    Use Amazon Elastic Container Service (Amazon ECS) with Amazon EC2 for compute power.
+    Use a managed Amazon RDS cluster for the database.
+-   [ ] C. Use Amazon S3 to host static content.
+    Use Amazon Elastic Kubernetes Service (Amazon EKS) with AWS Fargate for compute power.
+    Use a managed Amazon RDS cluster for the database.
+-   [ ] D. Use Amazon EC2 Reserved Instances to host static content.
+    Use Amazon Elastic Kubernetes Service (Amazon EKS) with Amazon EC2 for compute power.
+    Use a managed Amazon RDS cluster for the database.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Use Amazon S3 to host static content.
+    Use Amazon Elastic Container Service (Amazon ECS) with AWS Fargate for compute power.
+    Use a managed Amazon RDS cluster for the database.
+
+Why these are the correct answers:
+
+A. Use Amazon S3 to host static content.
+Use Amazon Elastic Container Service (Amazon ECS) with AWS Fargate for compute power.
+Use a managed Amazon RDS cluster for the database.
+
+-   [ ] Amazon S3 is cost-effective for hosting static content.
+-   [ ] Amazon ECS with Fargate simplifies container deployment and management.
+-   [ ] Managed RDS clusters reduce operational overhead for databases.
+
+Why are the other answers wrong?
+
+-   [ ] B. CloudFront is a CDN and is not necessary for hosting all static content.
+    EC2 requires more management than Fargate.
+-   [ ] C. EKS is more complex than ECS and is not needed for a simple containerized application.
+-   [ ] D. EC2 Reserved Instances are for long-running workloads, not for hosting static content.
+    EKS is more complex than ECS.
+
+Therefore, Option A is the most straightforward and cost-effective solution.
+
+</details>
+<details>
+  <summary>Question 487</summary>
+
+A company seeks a storage solution for its application. The solution must be highly available and scalable.
+The solution also must function as a file system be mountable by multiple Linux instances in AWS and on premises through native protocols, and have no minimum size requirements.
+The company has set up a Site-to-Site VPN for access from its on-premises network to its VPC.
+Which storage solution meets these requirements?
+
+-   [ ] A. Amazon FSx Multi-AZ deployments
+-   [ ] B. Amazon Elastic Block Store (Amazon EBS) Multi-Attach volumes
+-   [ ] C. Amazon Elastic File System (Amazon EFS) with multiple mount targets
+-   [ ] D. Amazon Elastic File System (Amazon EFS) with a single mount target and multiple access points
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C. Amazon Elastic File System (Amazon EFS) with multiple mount targets
+
+Why these are the correct answers:
+
+C. Amazon Elastic File System (Amazon EFS) with multiple mount targets
+
+-   [ ] Amazon EFS provides a scalable, highly available file system that can be mounted by multiple Linux instances.
+-   [ ] It supports access from both AWS and on-premises via Site-to-Site VPN.
+
+Why are the other answers wrong?
+
+-   [ ] A. Amazon FSx is not designed to be mounted by multiple Linux instances both in AWS and on-premises using native protocols.
+-   [ ] B. EBS Multi-Attach allows attaching a volume to multiple EC2 instances but is not designed for on-premises access or as a file system.
+-   [ ] D. EFS access points manage access but do not change the mount target behavior.
+
+Therefore, Option C is the correct solution.
+
+</details>
+<details>
+  <summary>Question 488</summary>
+
+A 4-year-old media company is using the AWS Organizations all features feature set to organize its AWS accounts.
+According to the company's finance team, the billing information on the member accounts must not be accessible to anyone, including the root user of the member accounts.
+Which solution will meet these requirements?
+
+-   [ ] A. Add all finance team users to an IAM group.
+    Attach an AWS managed policy named Billing to the group.
+-   [ ] B. Attach an identity-based policy to deny access to the billing information to all users, including the root user.
+-   [ ] C. Create a service control policy (SCP) to deny access to the billing information.
+    Attach the SCP to the root organizational unit (OU).
+-   [ ] D. Convert from the Organizations all features feature set to the Organizations consolidated billing feature set.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C. Create a service control policy (SCP) to deny access to the billing information.
+    Attach the SCP to the root organizational unit (OU).
+
+Why these are the correct answers:
+
+C. Create a service control policy (SCP) to deny access to the billing information.
+Attach the SCP to the root organizational unit (OU).
+
+-   [ ] Service Control Policies (SCPs) allow you to centrally manage permissions for all accounts in your AWS Organization.
+-   [ ] SCPs can deny access to billing information, even to the root user.
+
+Why are the other answers wrong?
+
+-   [ ] A. IAM policies grant permissions but cannot override the root user's access to billing information.
+-   [ ] B. Identity-based policies cannot deny access to the root user.
+-   [ ] D. Consolidated billing simplifies billing but does not prevent access to billing information.
+
+Therefore, Option C is the correct solution.
+
+</details>
+<details>
+  <summary>Question 489</summary>
+
+An ecommerce company runs an application in the AWS Cloud that is integrated with an on-premises warehouse solution.
+The company uses Amazon Simple Notification Service (Amazon SNS) to send order messages to an on-premises HTTPS endpoint so the warehouse application can process the orders.
+The local data center team has detected that some of the order messages were not received.
+A solutions architect needs to retain messages that are not delivered and analyze the messages for up to 14 days.
+Which solution will meet these requirements with the LEAST development effort?
+
+-   [ ] A. Configure an Amazon SNS dead letter queue that has an Amazon Kinesis Data Stream target with a retention period of 14 days.
+-   [ ] B. Add an Amazon Simple Queue Service (Amazon SQS) queue with a retention period of 14 days between the application and Amazon SNS.
+-   [ ] C. Configure an Amazon SNS dead letter queue that has an Amazon Simple Queue Service (Amazon SQS) target with a retention period of 14 days.
+-   [ ] D. Configure an Amazon SNS dead letter queue that has an Amazon DynamoDB target with a TTL attribute set for a retention period of 14 days.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C. Configure an Amazon SNS dead letter queue that has an Amazon Simple Queue Service (Amazon SQS) target with a retention period of 14 days.
+
+Why these are the correct answers:
+
+C. Configure an Amazon SNS dead letter queue that has an Amazon Simple Queue Service (Amazon SQS) target with a retention period of 14 days.
+
+-   [ ] SNS dead letter queues (DLQs) allow you to retain undeliverable messages.
+-   [ ] SQS provides a queue with a configurable retention period, making it suitable for storing and analyzing failed messages.
+
+Why are the other answers wrong?
+
+-   [ ] A. Kinesis Data Streams are for real-time data streaming, not for storing undelivered messages.
+-   [ ] B. Adding an SQS queue between the application and SNS requires more development effort to modify the application.
+-   [ ] D. DynamoDB is a NoSQL database and is not the most efficient way to store and analyze messages compared to SQS.
+
+Therefore, Option C is the most efficient solution with the least development effort.
+
+</details>
+<details>
+  <summary>Question 490</summary>
+
+A gaming company uses Amazon DynamoDB to store user information such as geographic location, player data, and leaderboards.
+The company needs to configure continuous backups to an Amazon S3 bucket with a minimal amount of coding.
+The backups must not affect availability of the application and must not affect the read capacity units (RCUs) that are defined for the table.
+Which solution meets these requirements?
+
+-   [ ] A. Use an Amazon EMR cluster.
+    Create an Apache Hive job to back up the data to Amazon S3.
+-   [ ] B. Export the data directly from DynamoDB to Amazon S3 with continuous backups.
+    Turn on point-in-time recovery for the table.
+-   [ ] C. Configure Amazon DynamoDB Streams.
+    Create an AWS Lambda function to consume the stream and export the data to an Amazon S3 bucket.
+-   [ ] D. Create an AWS Lambda function to export the data from the database tables to Amazon S3 on a regular basis.
+    Turn on point-in-time recovery for the table.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Export the data directly from DynamoDB to Amazon S3 with continuous backups.
+    Turn on point-in-time recovery for the table.
+
+Why these are the correct answers:
+
+B. Export the data directly from DynamoDB to Amazon S3 with continuous backups.
+Turn on point-in-time recovery for the table.
+
+-   [ ] DynamoDB's point-in-time recovery (PITR) provides continuous backups without affecting application availability or RCUs.
+-   [ ] It allows you to restore the table to any point in time within the retention period.
+
+Why are the other answers wrong?
+
+-   [ ] A. EMR and Apache Hive are complex and not cost-effective for simple backups.
+-   [ ] C. DynamoDB Streams capture changes to the table but do not provide a full backup solution.
+    Lambda functions would require more coding.
+-   [ ] D. Lambda functions for regular exports require coding and can affect RCUs.
+
+Therefore, Option B is the most efficient and least disruptive solution.
+
+</details>
 
 
 
