--- a/451_500.md
+++ b/451_500.md
@@ -2155,7 +2155,72 @@ Therefore, Option D is the correct solution.
 
 </details>
 
+<details>
+  <summary>Question 500</summary>
 
+A company has multiple Windows file servers on premises.
+The company wants to migrate and consolidate its files into an Amazon FSx for Windows File Server file system.
+File permissions must be preserved to ensure that access rights do not change.
+
+Which solutions will meet these requirements?
+(Choose two.)
+
+-   [ ] A. Deploy AWS DataSync agents on premises.
+    Schedule DataSync tasks to transfer the data to the FSx for Windows File Server file system.
+-   [ ] B. Copy the shares on each file server into Amazon S3 buckets by using the AWS CLI.
+    Schedule AWS DataSync tasks to transfer the data to the FSx for Windows File Server file system.
+-   [ ] C. Remove the drives from each file server.
+    Ship the drives to AWS for import into Amazon S3.
+    Schedule AWS DataSync tasks to transfer the data to the FSx for Windows File Server file system.
+-   [ ] D. Order an AWS Snowcone device.
+    Connect the device to the on-premises network.
+    Launch AWS DataSync agents on the device.
+    Schedule DataSync tasks to transfer the data to the FSx for Windows File Server file system.
+-   [ ] E. Order an AWS Snowball Edge Storage Optimized device.
+    Connect the device to the on-premises network.
+    Copy data to the device by using the AWS CLI.
+    Ship the device back to AWS for import into Amazon S3.
+    Schedule AWS DataSync tasks to transfer the data to the FSx for Windows File Server file system.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Deploy AWS DataSync agents on premises.
+    Schedule DataSync tasks to transfer the data to the FSx for Windows File Server file system.
+-   [ ] D. Order an AWS Snowcone device.
+    Connect the device to the on-premises network.
+    Launch AWS DataSync agents on the device.
+    Schedule DataSync tasks to transfer the data to the FSx for Windows File Server file system.
+
+Why these are the correct answers:
+
+A. Deploy AWS DataSync agents on premises.
+Schedule DataSync tasks to transfer the data to the FSx for Windows File Server file system.
+
+-   [ ] AWS DataSync is designed to efficiently and securely transfer file data between on-premises and AWS storage.
+-   [ ] It preserves file metadata and permissions, which is crucial for maintaining access rights.
+
+D. Order an AWS Snowcone device.
+Connect the device to the on-premises network.
+Launch AWS DataSync agents on the device.
+Schedule DataSync tasks to transfer the data to the FSx for Windows File Server file system.
+
+-   [ ] AWS Snowcone can be used for data transfer in situations where network bandwidth is limited.
+-   [ ] Running DataSync agents on Snowcone allows for efficient data transfer with permission preservation.
+
+Why are the other answers wrong?
+
+-   [ ] B. Copying shares to S3 using the AWS CLI does not preserve Windows file permissions directly.
+    While DataSync can move data from S3, the initial transfer loses important metadata.
+-   [ ] C. Removing drives and shipping them to AWS is not a practical or efficient way to migrate data, especially when needing to preserve permissions.
+-   [ ] E. Snowball Edge is designed for larger data transfers.
+    Using the AWS CLI to copy data to it is less efficient than using DataSync, and the intermediate step of shipping the device adds complexity.
+
+Therefore, Options A and D are the most appropriate solutions.
+
+</details>
 
 
 
